New version of mergado-api-client Update user locale every time Added ping hook Fixed local session cookie domain Added HU and PL langs Fixed getting token Fixed user and user_id

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,9 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+REDIRECT_URI="http://localhost/logbook-app/www/oauth2"
+CLIENT_ID=client_id_from_mergado_developers
+CLIENT_SECRET=client_secret_from_mergado_developers
+MERGADO_OAUTH_ENDPOINT="http://localhost/mergado/oauth2"
+MERGADO_API_ENDPOINT="http://localhost/mergado/api"
